--- a/iOS/ios.travis.yml
+++ b/iOS/ios.travis.yml
@@ -43,6 +43,7 @@ script:
     -destination $DESTINATION \
     ONLY_ACTIVE_ARCH=NO \
     CODE_SIGN_IDENTITY=\"\" \
-    CODE_SIGNING_REQUIRED=NO | \
+    CODE_SIGNING_REQUIRED=NO \
+    CODE_SIGNING_ALLOWED=YES | \
     xcpretty
   - pod lib lint # --allow-warnings
